misalignment solved

--- a/pages/pagestyle.css
+++ b/pages/pagestyle.css
@@ -1,7 +1,3 @@
-#particles-js {
-    height: 50em;
-}
-
 #open {
     position: absolute;
     left: 1em;
@@ -67,43 +63,20 @@ li {
 
 /*---------------------------------------------------------about---------------------------------------------------------------- */
 
-.ABOUT #particles-js{
-    height:45em;
+.ABOUT #particles-js {
+    height: 100%;
 }
+
 .about {
     text-transform: capitalize;
     position: absolute;
-    left:15%;
-    top: 4em;
+    left: 15%;
+    top: 12%;
     width: 70%;
 }
+
 .about h2 {
     margin-top: 1.5em;
-}
-
-.about ul {
-    display: inline-flex;
-    margin-top: 1em;
-    margin-bottom: 4em;
-}
-
-.about ul p {
-    font-weight: 200;
-    font-size: 12px;
-    line-height: 20px;
-    text-transform: none;
-}
-.about li {
-    list-style-type: none;
-    text-align: center;
-    background-color: rgb(7, 7, 7);
-    box-shadow: 0 0 8px 2px #1201f7;
-    font-size: 13px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    width: 18em;
-    border-radius: 15px;
-    margin: .5em 3em 0 0;
-    padding: 2em 0em 1em 0em;
 }
 
 .desktop {
@@ -112,6 +85,32 @@ li {
 
 .mobile {
     display: none;
+}
+
+.about ul {
+    margin-top: 1em;
+    text-align: center;
+    padding-left: 0;
+}
+
+.about li {
+    list-style-type: none;
+    text-align: center;
+    background-color: rgb(7, 7, 7);
+    box-shadow: 0 0 8px 2px #1201f7;
+    font-size: 13px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    width: 21em;
+    border-radius: 15px;
+    margin: .5em 3em 0 0;
+    padding: 2em 0em 1em 0em;
+}
+
+.about ul p {
+    font-weight: 200;
+    font-size: 12px;
+    line-height: 20px;
+    text-transform: none;
 }
 
 .text {
@@ -128,18 +127,21 @@ li {
 
 /*---------------------------------------------------------skills---------------------------------------------------------------- */
 
-.SKILLS #particles-js{
-    height: 85em;
+.SKILLS #particles-js {
+    height: 80em;
 }
+
 .skills {
     position: absolute;
     left: 15%;
-    top: 3em;
+    top: 15%;
     width: 75%;
     padding-bottom: 4em;
 }
+
 .techskills {
     margin-top: 6em;
+    text-align: center;
 }
 
 .techskills ul {
@@ -161,6 +163,10 @@ li {
 .techskills p {
     padding-top: 10px;
     font-size: 15px;
+}
+
+.softskills {
+    text-align: center;
 }
 
 .softskills ul {
@@ -204,14 +210,15 @@ li {
 
 /*---------------------------------------------------------project---------------------------------------------------------------- */
 
-.PROJECT #particles-js{
+.PROJECT #particles-js {
     height: 65em;
 }
+
 .project {
     position: absolute;
     left: 20%;
-    top: 3em;
-    width: 54%;
+    top: 10%;
+    width: 50%;
 }
 
 .projectlist h5 {
@@ -244,13 +251,13 @@ li {
 .projectlist p {
     font-size: 13px;
     font-weight: 200;
-    line-height: 20px;
+    line-height: 25px;
     margin-top: -2em;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .projectLine {
-    height: 7em;
+    height: 8em;
     width: 1px;
     background-color: grey;
     margin-right: 15px;
@@ -272,13 +279,15 @@ li {
 
     /*-------------------------------------------about----------------------------------*/
     .ABOUT #particles-js {
-        height: 58em;
+        height: 55em;
     }
+
     .about {
-        left: 14%;
-        top: 5em;
+        left: 13%;
+        top: 13%;
         width: 74%;
     }
+
     .text {
         font-size: 12px;
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -295,6 +304,7 @@ li {
 
     .mobile {
         display: inline-block;
+        text-align: center;
     }
 
     .mobile p {
@@ -302,12 +312,14 @@ li {
     }
 
     .about ul {
-        display: inline-block;
-        margin-left: -14%;
+        display: block;
+        width: 100%;
+        text-align: center;
     }
 
     .about li {
         padding-bottom: 1em;
+        margin-right: 0;
         width: 20em;
     }
 
@@ -317,18 +329,26 @@ li {
     }
 
     .skills {
-        left: 7%;
-        top: 7em;
+        left: 6%;
+        top: 15%;
         width: 90%;
     }
-    .skills h1, h2{
+
+    .skills h1,
+    h2 {
         font-size: 25px;
     }
 
     .techskills {
         margin-top: 3em;
-        margin-left: -2em;
     }
+
+    .techskills ul {
+        text-align: center;
+        padding-left: 0em;
+        margin-right: -2em;
+    }
+
     .techskills li {
         height: 5em;
         width: 5em;
@@ -352,8 +372,9 @@ li {
         padding-top: 0;
     }
 
-    .softskills {
-        margin-left: -2em;
+    .softskills ul {
+        text-align: center;
+        padding-left: 0em;
     }
 
     .softskills li {
@@ -378,13 +399,14 @@ li {
     }
 
     /*-------------------------------------------project----------------------------------*/
-    .PROJECT #particles-js{
+    .PROJECT #particles-js {
         height: 55em;
     }
+
     .project {
         width: 85%;
         left: 10%;
-        top: 4em;
+        top: 15%;
     }
 
     .projectlist {
